updated dataframe and initial infect method

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,9 +1,10 @@
 [virus.stats]
-infectionRange      = 0.1
-infectionChance     = 0.1
-mortalityChance     = 0.1
-maskEffectiveness   = 0.1
-recoveryTime        = 100
+infection_range      = 0.1
+k_value              = 0.1
+reproduction_rate    = 3
+mortality_rate       = 0.1
+mask_effectiveness   = 0.1
+recovery_time        = 100
 
 [people]
 populationDensity   = 0.1
