Thorough code cleanup

--- a/config/config.ini
+++ b/config/config.ini
@@ -7,9 +7,11 @@ mask_effectiveness   = 0.1
 recovery_time        = 100
 
 [people]
-populationDensity   = 0.1
-totalPopulation     = 100
-healthcareCapacity  = 50
+population_density   = 0.1
+totalpopulation      = 100
+healthcare_capacity  = 50
+mean_age             = 45
+std_dev              = 30
 
 [general]
 animation = yes
