New infect system init

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,17 +1,20 @@
 [virus.stats]
-infection_range      = 0.005
-k_value              = 0.1
-reproduction_rate    = 3
-mortality_rate       = 0.1
-mask_effectiveness   = 0.1
-recovery_time        = 100
+infection_range                 = 0.001
+k_value                         = 0.1
+reproduction_rate               = 3
+mortality_rate                  = 0.1
+mask_effectiveness              = 0.1
+recovery_time                   = 100
 
 [people]
-population_density   = 0.1
-totalpopulation      = 100
-healthcare_capacity  = 50
-mean_age             = 45
-std_dev              = 30
+population_density              = 0.1
+total_population                = 100
+healthcare_capacity             = 50
+min_age                         = 5
+max_dev                         = 90
+use_masks                       = True
+age_vulnerability               = True
+social_distancing_percent       = 0.6
 
 [general]
 animation = yes
