--- a/.github/workflows/build-status.yml
+++ b/.github/workflows/build-status.yml
@@ -5,7 +5,7 @@ name: Build Status
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, animation_experiments ]
   pull_request:
     branches: [ master ]
 
