refining death mechanism and adding in hospitalization system

--- a/config/config.ini
+++ b/config/config.ini
@@ -2,19 +2,22 @@
 infection_range                 = 0.001
 k_value                         = 0.1
 reproduction_rate               = 3
-mortality_rate                  = 0.1
+mortality_rate                  = {"0-19": 0.00003, "20-49": 0.0002, "50-69": 0.005, "70-100": 0.054}
 mask_effectiveness              = 0.1
 recovery_time                   = 100
 
 [people]
 population_density              = 0.1
-total_population                = 100
+total_population                = 1000
 healthcare_capacity             = 50
 min_age                         = 5
 max_dev                         = 90
 use_masks                       = True
 age_vulnerability               = True
 social_distancing_percent       = 0.6
+
+[area]
+healthcare_capacity_ratio       = 10
 
 [general]
 animation = yes
