--- a/config/config.ini
+++ b/config/config.ini
@@ -1,23 +1,21 @@
 [virus.stats]
 infection_range                 = 0.001
 k_value                         = 0.1
-reproduction_rate               = 3
+r_value                         = 3
 mortality_rate                  = {"0-19": 0.00003, "20-49": 0.0002, "50-69": 0.005, "70-100": 0.054}
 mask_effectiveness              = 0.1
 recovery_time                   = 100
 
-[people]
-population_density              = 0.1
-total_population                = 1000
+[people.stats]
 healthcare_capacity             = 50
 min_age                         = 5
-max_dev                         = 90
+max_age                         = 90
+social_distancing_percent       = 0.6
 use_masks                       = True
 age_vulnerability               = True
-social_distancing_percent       = 0.6
 
-[area]
+[area.stats]
 healthcare_capacity_ratio       = 10
+total_population                = 1000
 
-[general]
-animation = yes
+
