main file, every config works from congig file

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,16 +3,18 @@ infection_range                 = 0.001
 k_value                         = 0.1
 r_value                         = 3
 mortality_rate                  = {"0-19": 0.00003, "20-49": 0.0002, "50-69": 0.005, "70-100": 0.054}
-mask_effectiveness              = 0.1
+mask_effectiveness              = {"no_mask": 0, "cloth_mask": 60, "surgery_mask": 70, "n95": 90}
 recovery_time                   = 100
 
 [people.stats]
 healthcare_capacity             = 50
 min_age                         = 5
 max_age                         = 90
-social_distancing_percent       = 0.6
+social_distancing_percent       = 0.4
+speed                           = 0.004
 use_masks                       = True
 age_vulnerability               = True
+
 
 [area.stats]
 healthcare_capacity_ratio       = 10
