Option to kick in mask wearing and social distancing later on

--- a/config/config.ini
+++ b/config/config.ini
@@ -10,14 +10,16 @@ recovery_time                   = 100
 healthcare_capacity             = 50
 min_age                         = 5
 max_age                         = 90
-social_distancing_percent       = 0.4
-speed                           = 0.004
+social_distancing_percent       = 0.6
+speed                           = 0.01
 use_masks                       = True
 age_vulnerability               = True
 
 
 [area.stats]
-healthcare_capacity_ratio       = 10
+healthcare_capacity_ratio       = 5
 total_population                = 1000
+enforce_mask_wearing_at         = -1
+enforce_social_distancing_at    = -1
 
 
