Refining visualization, fixing buttons, and adding about me button

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,11 +1,3 @@
-[virus.stats]
-infection_range                 = 0.001
-k_value                         = 0.1
-r_value                         = 3
-mortality_rate                  = {"0-19": 0.00003, "20-49": 0.0002, "50-69": 0.005, "70-100": 0.054}
-mask_effectiveness              = {"no_mask": 0, "cloth_mask": 60, "surgery_mask": 70, "n95": 90}
-recovery_time                   = 100
-
 [people.stats]
 healthcare_capacity             = 50
 min_age                         = 5
@@ -14,6 +6,22 @@ social_distancing_percent       = 0.5
 speed                           = 0.01
 use_masks                       = True
 age_vulnerability               = True
+
+[covid.stats]
+infection_range                 = 0.001
+k_value                         = 0.1
+r_value                         = 3
+mortality_rate                  = {"0-19": 0.00003, "20-49": 0.0002, "50-69": 0.005, "70-100": 0.054}
+mask_effectiveness              = {"no_mask": 0, "cloth_mask": 60, "surgery_mask": 70, "n95": 90}
+recovery_time                   = 120
+
+[influenza.stats]
+infection_range                 = 0.001
+k_value                         = 0.9
+r_value                         = 1.8
+mortality_rate                  = {"0-19": 0.0002, "20-49": 0.0005, "50-69": 0.0006, "70-100": 0.0086}
+mask_effectiveness              = {"no_mask": 0, "cloth_mask": 60, "surgery_mask": 70, "n95": 90}
+recovery_time                   = 80
 
 [area.stats]
 healthcare_capacity_ratio       = 9
