--- a/config/config.ini
+++ b/config/config.ini
@@ -12,7 +12,7 @@ infection_range                 = 0.001
 k_value                         = 0.1
 r_value                         = 3
 mortality_rate                  = {"0-19": 0.00003, "20-49": 0.0002, "50-69": 0.005, "70-100": 0.054}
-mask_effectiveness              = {"no_mask": 0, "cloth_mask": 60, "surgery_mask": 70, "n95": 90}
+mask_effectiveness              = {"no_mask": 0, "cloth_mask": 60, "surgery_mask": 70, "n95_mask": 90}
 recovery_time                   = 120
 
 [influenza.stats]
@@ -20,7 +20,7 @@ infection_range                 = 0.001
 k_value                         = 0.9
 r_value                         = 1.8
 mortality_rate                  = {"0-19": 0.0002, "20-49": 0.0005, "50-69": 0.0006, "70-100": 0.0086}
-mask_effectiveness              = {"no_mask": 0, "cloth_mask": 65, "surgery_mask": 75, "n95": 95}
+mask_effectiveness              = {"no_mask": 0, "cloth_mask": 65, "surgery_mask": 75, "n95_mask": 95}
 recovery_time                   = 80
 
 [area.stats]
